--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ html {
 
 .front {
     height: 85vh;
-    background-image: url("city.png");
+    background-image: url("images/city.png");
     background-size: cover;
     text-align: center;
 }
