--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ html {
     text-decoration: none;
     color: white;
     font-weight: 500;
+    float: right;
 }
 
 .navbar a:hover {
@@ -84,4 +85,11 @@ footer {
     width: 100%;
     text-align: center;
     background-color: #f7f7f7;
+}
+
+.logo-navbar {
+    float: left;
+    width: auto;
+    height: auto;
+    max-height: 60px;
 }
